# Virus-Total-API-Handler

./: .gitignore  Cargo.toml  LICENSE  README.md
api_key/: api_key.txt
src/: main.rs
