[package]
name = "virus_total_api_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3"
serde_json = "1.0"